# 98fmplayer

./: .gitignore  build.zig  build.zig.zon
.github/workflows/: publish.yml
cli/: Makefile.am  build.zig  build.zig.zon  configure.ac  main.c
common/: fmplayer_drumrom_static.c  fmplayer_drumrom_static.h  fmplayer_file_gio.c  fmplayer_file_js.c  fmplayer_file_js.js  fmplayer_file_unix.c
fmdriver/: fmdriver_pmd.c
fmdsp/: fmdsp_platform_js.c  fmdsp_platform_js.js  fmdsp_platform_wasi.c
gtk/: Makefile.am  build.zig  build.zig.zon  main.c  wavesave.c
pacc/: pacc-fb.c  pacc-fb.h  pacc-gl-inc.h  pacc-gl.c  pacc-js.c  pacc-js.h  pacc-js.js  pacc.h
sdl/: build.zig  build.zig.zon  main.c  pacc-gl-inc.h
sdl/osx/: Info.plist
soundout/: alsaout.c
web/: audio.js  build.zig  build.zig.zon  index.html  index.js  main.c  pacc-webgl.c  pacc-webgl.h  pacc-webgl.js  wasi.js
win32/: about.c  build.zig  build.zig.zon  main.c  setup-wine.sh
